# shiori3-rs

./: AGENTS.md  Cargo.toml
.github/prompts/: kiro-spec-design.prompt.md  kiro-spec-impl.prompt.md  kiro-spec-init.prompt.md  kiro-spec-requirements.prompt.md  kiro-spec-status.prompt.md  kiro-spec-tasks.prompt.md  kiro-steering-custom.prompt.md  kiro-steering.prompt.md  kiro-validate-design.prompt.md  kiro-validate-gap.prompt.md  kiro-validate-impl.prompt.md
.kiro/specs/upgrade-dependencies/: design.md  gap-analysis.md  requirements.md  research.md  spec.json  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
crates/shiori3_ukadoc_convert/: Cargo.toml
crates/shiori3_ukadoc_convert/src/: event.rs  lib.rs
crates/shiori3_ukadoc_convert/src/ukadoc/: list_plugin_event.html  list_sakura_script.html  list_shiori_event.html  list_shiori_resource.html
emo/: .gitignore  Cargo.toml  LICENSE  README.md
emo/lua_script/: hello.lua  init.lua  request.lua
emo/src/: lib.rs  lua_tests.rs  shiori.rs  windows.rs
old/: README.md
old/.cargo/: config
old/crates/shiori3_ukadoc_convert/: Cargo.toml
old/crates/shiori3_ukadoc_convert/src/: event.rs  lib.rs
old/crates/shiori3_ukadoc_convert/src/ukadoc/: list_propertysystem.html  list_shiori_event_ex.html  mod.rs
old/src/: async_entry.rs  error.rs  ext_api.rs  ext_parse.rs  gstr.rs  lib.rs  windows.rs
old/src/parsers/test_data/: logfile.txt  shiori3-1.txt
src/: api.rs  async_entry.rs  async_error.rs  async_raw.rs  di.rs  entry.rs  error.rs  event.rs  event_ext.rs  ext_api.rs  ext_parse.rs  ext_raw.rs  ext_str.rs  gstr.rs  lib.rs
src/api/: api.rs  error.rs  mod.rs  windows.rs
src/api_old/: api.rs  shiori.md  windows.rs
src/hglobal/: enc.rs  error.rs  mod.rs  windows.rs  windows_api.rs
src/parsers/: mod.rs  req.rs  req_args.rs  req_parser.pest  req_parser.rs  shiori.rs
src/parsers/test_data/: shiori2-1.txt  shiori3-2.txt
src/response/: 200-Test.txt  200.txt  204.txt  500-Poison.txt  500.txt  mod.rs
tests/: ext_str.rs  shiori_test.rs
