[package]
name = "shiori3"
description = "SHIORI/3.0 rust interface."
version = "0.6.0"
edition = "2021"
authors = ["ekicyou <dot.station@gmail.com>"]
repository = "https://github.com/ekicyou/shiori3-rs"
keywords = ["ghost", "shiori", "ukagaka"]
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0.75"
log = "0.4.20"
pest = "2.7.5"
pest_derive = "2.7.5"
thiserror = "1.0.51"

[target."cfg(windows)".dependencies.windows-sys]
version = "0.52.0"
features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_Globalization",
    ]

[dev-dependencies]
env_logger = "0.10.1"
