[package]
authors = ["ekicyou <dot.station@gmail.com>"]
description = "SHIORI/3.0 rust interface."
edition = "2024"
keywords = ["ghost", "shiori", "ukagaka"]
license = "MIT"
name = "shiori3"
readme = "README.md"
repository = "https://github.com/ekicyou/shiori3-rs"
version = "0.6.5"

[dependencies]
anyhow = "1.0.100"
log = "0.4.29"
pest = "2.8.4"
pest_derive = "2.8.4"
thiserror = "1.0.51"

[target."cfg(windows)".dependencies.windows-sys]
features = [
  "Win32_Foundation",
  "Win32_System_Memory",
  "Win32_Globalization",
]
version = "0.61.2"

[dev-dependencies]
env_logger = "0.11.8"
