[package]
name = "shiori3_ukadoc_convert"
description = "SHIORI/3.0 ukadoc convert"
version = "0.5.0"
edition = "2018"
authors = ["ekicyou <dot.station@gmail.com>"]
repository = "https://github.com/ekicyou/shiori3-rs"
keywords = ["ghost", "shiori", "ukagaka", "ukadoc"]
license = "MIT"
readme = "README.md"

[dependencies]
log = "0.4"
html5ever = "0.25"
tendril = "0.4"

[dependencies.markup5ever_rcdom]
git = "https://github.com/servo/html5ever.git"
version = "0.1"

[dev-dependencies]
env_logger = "0.7"

[build-dependencies]
env_logger = "0.7"
